--- a/package.json
+++ b/package.json
@@ -3,23 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "axios": "^0.19.0",
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2",
     "typescript": "3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve-watch": "npm run start & nodemon --watch server --exec babel-node",
+    "serve": "npm run start & server --exec babel-node"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "plugin:prettier/recommended",
+      "prettier/flowtype",
+      "prettier/react",
+      "prettier/standard",
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
@@ -32,5 +50,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router": "^5.0.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/styled-components": "^4.1.19",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "nodemon": "^1.19.2",
+    "prettier": "^1.18.2"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  },
+  "proxy": "http://localhost:3001"
 }
